--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "JuliaTutorialsTemplate"
+name = "Tutorials"
 uuid = "e088c1bc-e00f-47bb-8742-48f468c16799"
 authors = ["Rik Huijzer <t.h.huijzer@rug.nl>"]
 version = "0.1.0"
