--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,20 +20,12 @@ jobs:
       uses: actions/checkout@v2
       with:
         persist-credentials: false
-
     - uses: julia-actions/setup-julia@v1
     - uses: julia-actions/cache@v1
-
-    # For development purposes.
-    - if: ${{ github.repository == 'rikhuijzer/JuliaTutorialsTemplate' }}
-      run: julia --project -e 'using Pkg;
-        Pkg.add(url="https://github.com/rikhuijzer/PlutoStaticHTML.jl#main")'
-
-    - uses: julia-actions/julia-buildpkg@latest
+    - uses: julia-actions/julia-buildpkg@v1
 
     - name: Build notebooks
-      run: julia --project -e '
-        using JuliaTutorialsTemplate; build_tutorials()'
+      run: julia --project -e 'using Tutorials; build_tutorials()'
       env:
         JULIA_NUM_THREADS: '2'
         DISABLE_CACHE: '${{ github.event.inputs.disableCache }}'
