Set `permissions: write-all`

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,7 @@ on:
 jobs:
   BuildAndDeploy:
     runs-on: ubuntu-20.04
+    permissions: write-all
     steps:
     - name: Checkout
       uses: actions/checkout@v2
