--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,11 +14,11 @@ on:
 
 jobs:
   BuildAndDeploy:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     permissions: write-all
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
       with:
         persist-credentials: false
     - uses: julia-actions/setup-julia@v1
@@ -37,11 +37,10 @@ jobs:
         using Franklin; optimize(; fail_on_warning=true, minify=false)'
 
     - name: Deploy to secondary branch
-      if: ${{ github.event_name != 'pull_request' }}
+      if: github.ref == 'refs/heads/main'
       uses: peaceiris/actions-gh-pages@v3
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         # To reduce state (ease debugging) and the size of the gh-pages branch.
         force_orphan: true
         publish_dir: ./__site
-
